--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Namaste</title>
 </head>
 <body>
-    <div id="root">hello</div>
+    <div id="root"></div>
 <script type="module" src='./App.js'>
     
 </script>
